tdf#118836: fix grow-shrink animation in saved pptx.

Convert AnimeTransform with transform type SCALE to animScale.

Change-Id: I39dfbdb814afa78ca981238bb1876f4af0995791
Reviewed-on: https://gerrit.libreoffice.org/57790
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>