sd/source/filter/eppt/pptx-epptooxml.cxx
@@ -918,6 +918,27 @@ void PowerPointExport::WriteAnimationProperty(const FSHelperPtr& pFS, const Any&
     if (!rAny.hasValue())
         return;
 
+    ValuePair aPair;
+
+    if (rAny >>= aPair)
+    {
+        double x, y;
+        if ((aPair.First >>= x) && (aPair.Second >>= y))
+        {
+            if (nToken == XML_by)
+            {
+                // MS needs ending values but we have offset values.
+                x += 1.0;
+                y += 1.0;
+            }
+            pFS->singleElementNS(XML_p, nToken,
+                XML_x, OString::number(x*100000).getStr(),
+                XML_y, OString::number(y*100000).getStr(),
+                FSEND);
+        }
+        return;
+    }
+
     sal_uInt32 nRgb;
     double fDouble;
 
@@ -1344,6 +1365,12 @@ void PowerPointExport::WriteAnimationNodeAnimateInside(const FSHelperPtr& pFS, c
         WriteAnimateColorColor(pFS, xColor->getBy(), XML_by);
         WriteAnimateColorColor(pFS, xColor->getFrom(), XML_from);
         WriteAnimateColorColor(pFS, xColor->getTo(), XML_to);
+    }
+    else if (xTransform.is() && xTransform->getTransformType() == AnimationTransformType::SCALE)
+    {
+        WriteAnimationProperty(pFS, rXAnimate->getBy(), XML_by);
+        WriteAnimationProperty(pFS, rXAnimate->getFrom(), XML_from);
+        WriteAnimationProperty(pFS, rXAnimate->getTo(), XML_to);
     }
     else if (bWriteTo)
         WriteAnimateTo(pFS, rXAnimate->getTo(), rXAnimate->getAttributeName());
@@ -1781,7 +1808,8 @@ void PowerPointExport::WriteAnimationNode(const FSHelperPtr& pFS, const Referenc
             {
                 if (xTransform->getTransformType() == AnimationTransformType::SCALE)
                 {
-                    SAL_WARN("sd.eppt", "SCALE transform type not handled");
+                    xmlNodeType = XML_animScale;
+                    pMethod = &PowerPointExport::WriteAnimationNodeAnimate;
                 }
                 else if (xTransform->getTransformType() == AnimationTransformType::ROTATE)
                 {
