sd/qa/unit/export-tests-ooxml2.cxx
@@ -150,6 +150,7 @@ public:
     void testOpenDocumentAsReadOnly();
     void testTdf118835();
     void testTdf118768();
+    void testTdf118836();
 
     CPPUNIT_TEST_SUITE(SdOOXMLExportTest2);
 
@@ -221,6 +222,7 @@ public:
     CPPUNIT_TEST(testOpenDocumentAsReadOnly);
     CPPUNIT_TEST(testTdf118835);
     CPPUNIT_TEST(testTdf118768);
+    CPPUNIT_TEST(testTdf118836);
 
     CPPUNIT_TEST_SUITE_END();
 
@@ -1773,6 +1775,18 @@ void SdOOXMLExportTest2::testTdf118768()
 
     assertXPath(pXmlDocContent, "//p:anim[3]", "by", "(#ppt_h/3+#ppt_w*0.1)");
     assertXPath(pXmlDocContent, "//p:anim[3]/p:cBhvr/p:cTn", "autoRev", "1");
+    xDocShRef->DoClose();
+}
+
+void SdOOXMLExportTest2::testTdf118836()
+{
+    sd::DrawDocShellRef xDocShRef = loadURL(m_directories.getURLFromSrc("sd/qa/unit/data/odp/tdf118836.odp"), ODP);
+    utl::TempFile tempFile;
+    xDocShRef = saveAndReload(xDocShRef.get(), PPTX, &tempFile);
+
+    xmlDocPtr pXmlDocContent = parseExport(tempFile, "ppt/slides/slide1.xml");
+    assertXPath(pXmlDocContent, "//p:animScale/p:by", "x", "250000");
+    assertXPath(pXmlDocContent, "//p:animScale/p:by", "y", "250000");
     xDocShRef->DoClose();
 }
 
